--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
         "watch": "parcel src/index.html"
     },
     "devDependencies": {
-        "@types/three": "^0.130.1",
-        "parcel": "^2.0.0-rc.0",
         "@babel/core": "^7.14.8",
+        "@babel/preset-env": "^7.14.9",
         "@babel/preset-typescript": "^7.14.5",
-        "@babel/preset-env": "^7.14.9"
+        "@parcel/transformer-glsl": "^2.12.0",
+        "@types/three": "^0.130.1",
+        "parcel": "^2.0.0-rc.0"
     }
 }
